# meson-cpp-scaffold

./: .gitignore  README.md  meson.build
doc/: index.md
docker/debian/: Dockerfile
include/backtrace/: backtrace.h
include/version/: version.h
lib/: meson.build
lib/backtrace/: backtrace-disabled.cpp  backtrace-libunwind.cpp  backtrace.cpp  meson.build
lib/version/: last_modified.in.cpp  meson.build  version.in.cpp
test/: meson.build
test/sample.fail/: meson.build
test/sample.pass/: meson.build
test/sample.skip/: main.cpp  meson.build
tool/: meson.build
tool/backtracer/: main.cpp  meson.build
tool/version/: main.cpp  meson.build
